Making "Tools Page"
- Making Carousel (img slider) with bootstrap
- Making responsive page

--- a/main.html
+++ b/main.html
@@ -31,7 +31,7 @@
         </div>
 
         <div class="logo_size">
-            <a href="" class="logos_center ">
+            <a href="./tools.html" class="logos_center ">
                 <i class="fab fa-html5 md-60 tools_style"></i>
                 <p class="tools_center">TOOLS</p>
             </a>
@@ -44,8 +44,9 @@
             </a>
         </div>
         <!--<section>
-            <p>안녕하세요 저는 <i>김수민</i>입니다!</p>
-        </section>-->
+                    랜덤으로 자기소개 문장 출력하는 코드
+                    <p>안녕하세요 저는 <i>김수민</i>입니다!</p>
+                </section>-->
         
     </div>
 
