Making "Contact Page"
- Removing border line when user clicks the input buttons
- Using a tag with mailto
- Making input add-ons
- Making floating animation

--- a/main.html
+++ b/main.html
@@ -38,7 +38,7 @@
         </div>
 
         <div class="logo_size">
-            <a href="" class="logos_center">
+            <a href="./contact.html" class="logos_center">
                 <i class="fas fa-envelope-open-text md-60 email_style"></i>
                 <p>CONTACT</p>
             </a>
@@ -58,7 +58,7 @@
             <i class="fas fa-rocket rocket_icons mt-2"></i>
         </div>
 
-        <div class="col-3">
+        <div class="col-4">
             <span class = "input-group">
                 <input type="text" class="form-control">
                 <span class="input-group-text search_style"><i class="fas fa-search"></i></span>
@@ -67,10 +67,10 @@
         </div>
  
         
-        <div class="col-5">
+        <div class="col-2">
             <!--empty-->
         </div>
-        <div id="divClock" class="col-3 clock mt-2 clock_style" >
+        <div id="divClock" class="col-4 clock mt-2 clock_style" >
            
         </div>
     </footer>
