Making "Project Page"
- Making Card with Bootstrap
- Making fonr border
- Making scroll without scroll bar
- Making fixed footer
- Aligning hr tag to center

--- a/main.html
+++ b/main.html
@@ -15,16 +15,16 @@
 
 </head>
 <body onload="showClock()">
-    <div class="logos">
+    <div class="logos" id="sticky_logos">
         <div class="logo_size">
-            <a href="" class="logos_center">
+            <a href="./profile.html" class="logos_center">
                 <i class="far fa-id-card md-60 profile_style"></i>
                 <p class="profile_center">PROFILE</p>
             </a>
         </div>
             
         <div class="logo_size">
-            <a href="" class="logos_center">
+            <a href="./project.html" class="logos_center">
                 <i class="fab fa-fort-awesome-alt md-60 project_style"></i>
                 <p>PROJECTS</p>
             </a>
