--- a/html/contact.html
+++ b/html/contact.html
@@ -23,7 +23,7 @@
     <div class="tool_icon_arrange">
         <div class="logos">
             <div class="logo_size">
-                <a href="" class="logos_center">
+                <a href="./profile.html" class="logos_center">
                     <i class="far fa-id-card md-60 profile_style"></i>
                     <p class="profile_center">PROFILE</p>
                 </a>
