--- a/html/tools.html
+++ b/html/tools.html
@@ -20,14 +20,14 @@
     <div class="tool_icon_arrange">
         <div class="logos">
             <div class="logo_size">
-                <a href="" class="logos_center">
+                <a href="./profile.html" class="logos_center">
                     <i class="far fa-id-card md-60 profile_style"></i>
                     <p class="profile_center">PROFILE</p>
                 </a>
             </div>
                 
             <div class="logo_size">
-                <a href="" class="logos_center">
+                <a href="./project.html" class="logos_center">
                     <i class="fab fa-fort-awesome-alt md-60 project_style"></i>
                     <p>PROJECTS</p>
                 </a>
