--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="bg-image"></div>
 
     <div class="center_box">
-        <a href="./html/main.html"><img src="../img/austronant.png" class="profile_img"></a>
+        <a href="./html/main.html"><img src="./img/austronant.png" class="profile_img"></a>
         <h1>Kim, Su-min</h1>
         <span>풀스택 개발자 김수민의 포트폴리오에 오신 것을 환영합니다!</span>
         <span>❤프로필 이미지를 클릭해주세요❤</span>
