--- a/html/project.html
+++ b/html/project.html
@@ -72,7 +72,7 @@
                 <div class="row row-cols-1 row-cols-md-2 g-4 mt-1 project_image">
                     <div class="col">
                         <div class="card">
-                            <a href="">
+                            <a href="https://github.com/5Suminsss2/Whale">
                                 <img src="../img//moutain.png" class="card-img-top card_img" alt="...">
                             </a>
                             <div class="card-body">
@@ -85,7 +85,7 @@
                     
                     <div class="col">
                         <div class="card">
-                            <a href="">
+                            <a href="https://github.com/5Suminsss2/pig_diary">
                                 <img src="../img/milkyway.jpg" class="card-img-top card_img" alt="...">
                             </a>
                             <div class="card-body">
@@ -98,7 +98,7 @@
 
                     <div class="col">
                         <div class="card">
-                            <a href="">
+                            <a href="https://github.com/5Suminsss2/wetube">
                                 <img src="../img/background.jpg" class="card-img-top card_img" alt="...">
                             </a>
                             <div class="card-body">
@@ -112,7 +112,7 @@
 
                     <div class="col">
                         <div class="card">
-                            <a href="">
+                            <a href="https://github.com/5Suminsss2/movie_app">
                                 <img src="../img/dark sky.jpg" class="card-img-top card_img" alt="...">
                             </a>
                             <div class="card-body">
