--- a/html/profile.html
+++ b/html/profile.html
@@ -112,7 +112,7 @@
                             <div class="col-2" style="font-size: 40px;  margin-top: 7px;">🛠</div>
                             <div class="col-10">
                                 <h4>Fullstack Developer</h4>
-                            <p>풀스택 개발자를 꿈꾸며 끊임없이 전진하는 김수민입니다.</p>
+                            <p>프론트엔드 개발자를 꿈꾸며 끊임없이 전진하는 김수민입니다.</p>
                             </div>
                         </div>
                     </div>
